[VIDEO] Try other method to prevent fullscreen on iphone

--- a/src/components/VideoFeed.css
+++ b/src/components/VideoFeed.css
@@ -10,7 +10,7 @@
     top: 0;
     left: 0;
     display: block;
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
